# SCI_demo

./: CMakeLists.txt  modify.md  modify.rst  prj.conf  test.pptx
src/: main.c
sysbuild/ipc_radio/: prj.conf
